fix the incorrect version